[package]
name = "libvopono"
description = "Library for creating and using Linux network namespaces in Rust code"
license = "MIT/Apache-2.0"
version = "0.1.0"
authors = ["James McMurray <jamesmcm03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.8"
ipnetwork = "0.17.0"
log = "0.4.11"
nix = "0.19.0"
rtnetlink = "0.6.0"
thiserror = "1.0.22"
tokio = {version = "0.2", default_features = false, features = ["blocking", "rt-threaded"]}
# tokio = { version = "0.3", features = ["full"] }
