[package]
name = "libvopono"
description = "Library for creating and using Linux network namespaces in Rust code"
license = "MIT/Apache-2.0"
version = "0.1.0"
authors = ["James McMurray <jamesmcm03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
ipnetwork = "0.17"
log = "0.4"
nix = "0.19"
rtnetlink = "0.7"
thiserror = "1"
tokio = {version = "1", default_features = false, features = ["rt", "rt-multi-thread"]}
# tokio = { version = "0.3", features = ["full"] }

[[bin]]
name = "createns"
path = "src/bin.rs"
